2003-10-13  Mikael Hallendal  <micke@imendio.com>

	* NEWS: Updated for 0.14.1
	
	* configure.in: Bumped to 0.14.1
	
	* loudmouth/lm-connection.c: (connection_in_event): check if bytes_read
	  equals GNUTLS_E_AGAIN, fixes crash. Patch by Marinus Schraal.

2003-10-03  Mikael Hallendal  <micke@imendio.com>

        * Release 0.14
	
	* NEWS: Updated for 0.14
	
	* configure.in: Bumped to 0.14
	
2003-10-02  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Free the message handlers and message handler list when free'ing 
	  the connection.

2003-10-01  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Tweaked the --with-ssl option a bit.
	
	* loudmouth.spec.in: 
	- Added a with_ssl to be able to easily turn of GNU Tls support.
	- Fixes LM-14

2003-10-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_do_open):
	- Added a patch for IPv6-support submitted by Sjoerd Simons.
	- Sjoerd also seems to know this stuff better than me since his 
	  connection code looked more sane than mine. Thanks alot!

2003-10-01  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/Makefile.am: 
	- added lm-queue.[ch]
	  
	* loudmouth/lm-queue.[ch]: copied and extended from GQueue.
	
	* loudmouth/lm-connection.c: 
	- Use LmQueue instead of GQueue
	(lm_connection_open_and_block): Better handling of the queue.
	
	(lm_connection_send_with_reply_and_block): 
	- Fixed a bug causing replies to be over looked.

2003-10-01  Mikael Hallendal  <micke@imendio.com>

        * README.WIN32, win32-config.h: 
	- Added information about how to build on Windows. Fixes LM-12
	  
2003-08-24  Martyn Russell  <ginxd@btopenworld.com>

	* loudmouth/lm-connection.c:
	(connection_in_event): Use an int for bytes_read. Since bytes_read is
	  now also used for gnutls return value (which can be < 0) a gsize
	  (unsigned) is not a good idea...
	
2003-08-15  Mikael Hallendal  <micke@imendio.com>

        * Release 0.13.2
