@@ -1,0 +1,14 @@
+
+namespace Loudmouth {
+    public class Account {
+	public string username;
+	public string password;
+	public string resource;
+
+	public Account (string username, string password, string resource) {
+	    this.username = username;
+	    this.password = password;
+	    this.resource = resource;
+	}
+    }
+}
